[package]
name = "rels"
version = "0.1.1"
edition = "2021"
description = "A command line tool to easily track tickets and releases via git."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
duration-str = "0.7.0"
git2 = "0.18.1"
regex = "1.10.2"
